# UU_la_parallel_programming_practical_assignments

./: .gitignore  LICENSE.md  README.md
Assignment_1/: adt_set.cpp  concurrent_set.cpp  helper_code.cpp  main.cpp  set.cpp
Assignment_2/: CMakeLists.txt  FineList.cpp  LazyList.cpp  MultiSet.cpp  Node.cpp  OptimisticList.cpp  Set.cpp  compile_and_run.sh  main.cpp  run.sh  run_no_compile.sh
Assignment_2/lib/: CMakeLists.txt  FineList.cpp  LazyList.cpp  MultiSet.cpp  Node.cpp  Node.h  OptimisticList.cpp  Set.cpp  Set.h
Assignment_2/test/: CMakeLists.txt  FineSet_test.cpp  LazySet_test.cpp  MultiSet_test.cpp  Node_test.cpp  OptimisticSet_test.cpp
Assignment_3/: CMakeLists.txt  main.cpp  run.sh  run_no_compile.sh  test.sh
Assignment_3/lib/: ADT_Stack.cpp  ADT_Stack.h  CMakeLists.txt  Set.h  SimpleLockingStack.cpp  SimpleLockingStack.h  Stack.cpp  Stack.h  TreiberStack.cpp  TreiberStack.h
Assignment_3/test/: ADT_Stack_test.cpp  CMakeLists.txt  Node_test.cpp  Treiber_Stack_test.cpp
cpp_template/: calc_test.cpp
